[package]
name = "alibabacloud"
description = "📦 Aliyun API SDK written in Rust"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
repository = "https://github.com/lvillis/aliyun-sdk-rust"
homepage = "https://github.com/lvillis/aliyun-sdk-rust"
documentation = "https://github.com/lvillis/aliyun-sdk-rust/blob/main/README.md"
exclude = [
    "/docs/",
    "/tests/",
    "/.config/",
    "/.github/",
    "/.justfile",
    "/rust-toolchain.toml",
    "/.gitignore",
]

[dependencies]
tokio = { version = "1.45.0", default-features = false, features = ["rt", "macros"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
chrono = "0.4.40"
hmac = "0.12.1"
sha1 = "0.10.6"
base64 = "0.22.1"
percent-encoding = "2.3.1"
uuid = { version = "1.16.0", features = ["v4"] }

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
